# First-jobt-repo

./: .gitignore  README.md  index.html
Downloads/First-jobt-repo-main/First-jobt-repo-main/WorkBE/users/: admin.py  signals.py
Downloads/First-jobt-repo-main/First-jobt-repo-main/WorkBE/users/migrations/: 0003_rename_user_id_user_id.py
Downloads/First-jobt-repo-main/First-jobt-repo-main/WorkBE/workbe/: asgi.py
WorkBE/: manage.py
WorkBE/users/: models.py  serializers.py  urls.py  views.py
WorkBE/users/migrations/: 0002_userprofile.py
WorkBE/workbe/: urls.py
assets/css/: main.css
backend/: CHANGELOG.md  Dockerfile  PROGRESS_PLAN.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_server.py
backend/alembic/: env.py
backend/app/: config.py  constants.py  main.py
backend/app/core/: database.py  oauth2.py  security.py
backend/app/models/: __init__.py  base.py  interview_feedback.py  interview_session.py  job_category.py  password_reset.py  question_template.py  subscription.py  system_metrics.py  user.py
backend/app/prompts/: interviewer_prompts.py
backend/app/routers/api/: __init__.py
backend/app/routers/api/v1/: admin_route.py  analytics_route.py  auth_route.py  categories_route.py  feedback_route.py  interviews_route.py
backend/app/schemas/: __init__.py  admin_schema.py  analytics_schema.py  auth_schema.py  common_schema.py  feedback_schema.py  interview_schema.py  job_category_schema.py  question_template_schema.py  subscription_schema.py  user_schema.py
backend/app/services/: admin_service.py  analytics_service.py  category_service.py  email_service.py  feedback_service.py  interview_service.py  openai_service.py
backend/app/utils/: network.py
backend/scripts/: create_admin.py  seed_categories.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_feedback.py  test_integration.py  test_interviews.py
primelight/: index.html
primelight-main/: README.md  index.html
users/: tests.py
users/migrations/: 0001_initial.py
workbe/: settings.py  wsgi.py
